--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="./assent/styles.css">
     <title>Laboratorio 16</title>
 </head>
 <body>
@@ -17,7 +18,7 @@
         </nav>
     </header>
     <h1>Registro de usuarios</h1>
-    <form>
+    <form class="formulario">
 
         <label>Nombre:</label>
         <input type="text" id="nombre" name="nombre">
@@ -26,7 +27,7 @@
         <label>Contraseña:</label>
         <input type="password" id="password" name="password">
         <label>Imagen de perfil:</label>
-        <input type="file" id="Imagen" name="Imagen" onchange="mostrarImagen(event)">
+        <input type="file" id="imagen" name="imagen" accept="imagen" onchange="mostrarImagen(event)">
         <img id="ver-imagen" class="ver-imagen">
         <button type="submit">Registrar</button>
     
