--- a/index.html
+++ b/index.html
@@ -32,5 +32,7 @@
         <button type="submit">Registrar</button>
     
     </form>
+
+    <script src="./assent/script.js"></script>
 </body>
 </html>
