--- a/index.html
+++ b/index.html
@@ -17,8 +17,10 @@
             </ul>
         </nav>
     </header>
+
     <h1>Registro de usuarios</h1>
-    <form class="formulario">
+
+    <form class="formulario" onsubmit="return validarFormulario()">
 
         <label>Nombre:</label>
         <input type="text" id="nombre" name="nombre">
